:white_check_mark: test: 필터링된 마일스톤을 불러오는 테스트코드로 수정