@@ -1,22 +1,22 @@
 package codesquad.issuetracker.milestone;
 
 
-
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.model;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+import codesquad.issuetracker.milestone.dto.MilestoneQueryInfo;
+import codesquad.issuetracker.milestone.dto.MilestoneResponse;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 @WebMvcTest(MilestoneController.class)
@@ -27,29 +27,28 @@ class MilestoneControllerTest {
     @MockBean
     private MilestoneService milestoneService;
 
+
     @Test
     @DisplayName("마일스톤을 불러오고 200을 리턴하는지 테스트")
     void testFetchAllMilestonesReturnStatus200() throws Exception {
 
-        Milestone milestone1 = Milestone.builder()
+        MilestoneQueryInfo milestoneQueryInfo = MilestoneQueryInfo.builder()
+            .direction("asc")
+            .sort("updated_at")
+            .state("open")
+            .build();
+
+        MilestoneResponse milestoneResponse = MilestoneResponse.builder()
+            .id(1L)
             .title("테스트 마일스톤")
             .description("테스트 내용")
             .dueDate(null)
-            .isDeleted(false)
+            .state("OPEN")
             .updatedAt(null)
             .build();
 
-        Milestone milestone2 = Milestone.builder()
-            .title("테스트 마일스톤2")
-            .description("테스트 내용2")
-            .dueDate(null)
-            .isDeleted(false)
-            .updatedAt(null)
-            .build();
-
-        when(milestoneService.fetchAllMilestones()).thenReturn(
-            List.of(milestone1, milestone2));
-
+        when(milestoneService.fetchFilteredMilestones(any(MilestoneQueryInfo.class))).thenReturn(
+            Collections.singletonList(milestoneResponse));
         mockMvc.perform(get("/api/milestones"))
             .andExpect(status().isOk());
     }
@@ -58,20 +57,28 @@ class MilestoneControllerTest {
     @DisplayName("/api/milestones 에 접근했을 때 json 반환 결과 테스트")
     void testFetchAllMilestonesReturnJson() throws Exception {
 
-        Milestone milestone1 = Milestone.builder()
+        MilestoneQueryInfo milestoneQueryInfo = MilestoneQueryInfo.builder()
+            .direction("asc")
+            .sort("updated_at")
+            .state("open")
+            .build();
+
+        MilestoneResponse milestoneResponse = MilestoneResponse.builder()
+            .id(1L)
             .title("테스트 마일스톤")
             .description("테스트 내용")
             .dueDate(null)
-            .isDeleted(false)
+            .state("OPEN")
             .updatedAt(null)
             .build();
 
-        when(milestoneService.fetchAllMilestones()).thenReturn(List.of(milestone1));
+        when(milestoneService.fetchFilteredMilestones(any(MilestoneQueryInfo.class))).thenReturn(
+            Collections.singletonList(milestoneResponse));
 
         ObjectMapper objectMapper = new ObjectMapper();
-        String expectJson = objectMapper.writeValueAsString(List.of(milestone1));
+        String expectJson = objectMapper.writeValueAsString(List.of(milestoneResponse));
         mockMvc.perform(get("/api/milestones"))
-                .andExpect(content().json(expectJson));
+            .andExpect(content().json(expectJson));
 
     }
 
@@ -85,5 +92,15 @@ class MilestoneControllerTest {
                 .param("state", "CLOSED"))
             .andExpect(status().isOk());
 
+    }
+
+    @Test
+    @DisplayName("쿼리 파라미터에 소문자가 입력되어도 enum과 맵핑되는지 테스트")
+    void testMilestoneQueryInfoReceivesLowerCaseParam() throws Exception {
+        mockMvc.perform(get("/api/milestones/test")
+                .param("direction", "desc")
+                .param("sort", "due_date")
+                .param("state", "closed"))
+            .andExpect(status().isOk());
     }
 }
